--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 
+/*
+
+font-family: 'Montserrat', sans-serif;
+font-family: 'Roboto Slab', serif;
+font-family: 'Open Sans', sans-serif;
+
+*/
+
 * {
     box-sizing: border-box;
 }
@@ -20,4 +28,25 @@ h1, h2, h3, p {
 .container {
     max-width: 940px;
     margin: 0 auto;
+}
+
+.title-section {
+    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    color: #222222;
+    line-height: 1;
+    margin-bottom: 20px;
+}
+
+.subtitle-section {
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    text-align: center;
+    color: #777777;
+    line-height: 1;
+    margin-bottom: 80px;
 }
