--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,74 @@ h1, h2, h3, p {
     color: #777777;
     line-height: 1;
     margin-bottom: 80px;
+    display: block;
 }
+
+/* about */
+
+.about-us {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.about-item {
+    display: flex;
+    margin-top: 80px;
+    align-items: flex-start;
+}
+
+.about-item:nth-child(even) {
+    margin-left: 41%;
+}
+
+.about-item:nth-child(odd) {
+    margin-right: 40%;
+}
+
+.about-item:nth-child(odd) .about-item-text {
+    text-align: right;
+}
+
+.about-item:nth-child(even) .about-item-img {
+    order: -1;
+    margin-right: 38px;
+}
+
+.about-item:nth-child(odd) .about-item-img {
+    margin-left: 38px;
+}
+
+.about-item:last-child {
+    margin-left: 41%;
+    margin-right: 0;
+}
+
+.about-item:last-child .about-image {
+    background-color: #fed136;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-size: 18px;
+    text-align: center;
+    width: 178px;
+    padding: 40px;
+}
+
+.about-item-text-title {
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-item-text-subtitle {
+    text-transform: none;
+}
+
+.about-image {
+    border-radius: 50%;
+    border: 5px solid #f1f1f1;
+}
+
+/* about end */
 
 /* partners */
 
@@ -67,21 +134,3 @@ h1, h2, h3, p {
 }
 
 /* partners end */
-.about-title-section {
-    display: flex;
-    flex-direction: column;
-}
-
-.about-item {
-    display: flex;
-    margin-bottom: 80px;
-}
-
-.about-item:nth-child(even) .about-item-img {
-    order: -1;
-}
-
-.about-item-text-title {
-    display: flex;
-    flex-direction: column;
-}
